--- a/Assignment.css
+++ b/Assignment.css
@@ -14,7 +14,6 @@
 		top: 0;
 		left: 0;
 		background-image: url(Images/DonaldANorman.jpeg);
-		background-position: 0% 40%;
 		background-size: cover;
 		overflow: hidden;
 	}
@@ -22,7 +21,6 @@
 		width: 100%;
 		height: 100%;
 		background-image: url(Images/DonaldANorman.jpeg);
-		background-position: 0% 40%;
 		background-size: cover;
 		overflow: hidden;
 	}
@@ -31,13 +29,9 @@
 		background-position: 0% 20%;
 	}
 }
+/*	Add animation for the wording to follow the image*/
 @keyframes sliderWord{
 	0%{
-/*
-		visibility: visible;
-		padding-top: 150px;
-		padding-right:900px;
-*/
 		padding-top: 50%;
 	}
 	40%{
@@ -100,6 +94,33 @@
 	margin-top: 5px;
 	display:inline-block;
 }
+/*	Set a background of book page to the div*/
+.book-background{
+	position:static;
+	float:left;
+	width:180px;
+	height:285px;
+	margin: 50px auto;
+	background: url(Images/BookPage1.png) no-repeat;
+	background-size: cover;
+	background-position: 50% 0%;
+	transform-style: preserve-3d;
+	perspective: 500px;
+}
+/* 	Set the background of cover page for the book*/
+.book-cover{
+	background: url(Images/images.jpeg) no-repeat;
+	background-size: cover;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	transform-origin: 0 50%;
+	transition: all 0.3s ease-in;
+}
+/* 	Set transition of the book cover to rotate Y -60 degree*/
+.book-background:hover .book-cover{
+	transform: rotateY(-60deg);
+}
 #name{
 	margin-top: 20px;
 	float:left;
@@ -123,6 +144,9 @@ p#content{
 	margin-top: 20px;
 	float:left;
 	width:40%;
+}
+#italic-title{
+	font-style: italic;
 }
 #perceived-affordance{
 	margin-top: 20px;
