--- a/Assignment.css
+++ b/Assignment.css
@@ -54,6 +54,11 @@
 	width: 100%;
 	animation: resizeSmall 1.8s ease-in;
 }
+.go-back{
+	color: #f0f8ff;
+	text-align: left;
+	padding-left: 10px;
+}
 /*	Adjust the position of the title to the right bottom corner of the header image	*/
 .title{
 	color: #f0f8ff;
@@ -96,11 +101,14 @@
 }
 /*	Set a background of book page to the div*/
 .book-background{
-	position:static;
-	float:left;
+	position:relative;
 	width:180px;
 	height:285px;
-	margin: 50px auto;
+	float: right;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: 25%;
+	margin-bottom: 25px;
 	background: url(Images/BookPage1.png) no-repeat;
 	background-size: cover;
 	background-position: 50% 0%;
@@ -115,6 +123,7 @@
 	width: 100%;
 	height: 100%;
 	transform-origin: 0 50%;
+	/*Speed of the Door animation*/
 	transition: all 0.3s ease-in;
 }
 /* 	Set transition of the book cover to rotate Y -60 degree*/
@@ -145,8 +154,68 @@ p#content{
 	float:left;
 	width:40%;
 }
-#italic-title{
+.example{
+	width: 100%;
+	height: 325px;
+	position: relative;
+	float: right;
+}
+.door-back{
+  	background-color: lightgrey;
+  	position:relative;
+	float: right;
+  	width:100px;
+  	height:270px;
+  	margin-top:50px;
+	margin-left: 25%;
+	margin-right: 0px;
+	margin-bottom: 25px;
+}
+.door-back1{
+	position:relative;
+	width:100px;
+	height:270px;
+	float: right;
+	margin-top: 50px;
+	margin-left: 0px;
+	margin-right: 25%;
+	margin-bottom: 25px;
+	background: lightgrey;
+}
+.door-push{
+  	background: url(Images/WoodDoorPush.jpg) no-repeat;
+	background-size: contain;
+  	position:absolute;
+  	top:0px;
+  	left:0px;
+  	width:100%;
+  	height:100%;
+  	transform-origin: left;
+	transform-style: preserve-3d;
+  	/*Speed of the Door animation*/
+  	transition: all 0.5s ease-in;
+}
+.door-pull{
+	background: url(Images/WoodDoorPull.jpg) no-repeat;
+	background-size: contain;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	transform-origin: right;
+	transform-style: preserve-3d;
+	/*Speed of the Door animation*/
+	transition: all 0.5s ease-in;
+}
+/* 	Set transition of the book cover to rotate Y -60 degree*/
+.door-back:hover .door-push{
+	transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(60deg);
+}
+.door-back1:hover .door-pull{
+	transform: perspective(1500px) rotateY(60deg);
+}
+span#italic-title{
 	font-style: italic;
+	font-weight: 600;
 }
 #perceived-affordance{
 	margin-top: 20px;
@@ -160,5 +229,5 @@ p#content{
 }
 .footer{
 	text-align: center;
-	margin:20px auto;
+	margin:40px auto;
 }
